syntax = "proto3";

option go_package = "./proto";

package endpoint.braingain.v1;

service Braingain {
  rpc Chat(Prompt) returns (ChatCompletion);
  rpc GetDocument(DocumentId) returns (Document);
}

message DocumentId {
  string id = 1;
}

message Document {
  string id = 1;
  string filename = 2;
}

message Prompt {
  string prompt = 1;
}

message Source {
  string id = 1;
  int32 page = 2;
  float score = 3;
}

message ChatCompletion {
  string prompt = 1;
  string completion = 2;
  repeated Source sources = 3;
}